Overview scrollbar responsiveness fix
Ticket items no longer overflowing on smaller resolutions

--- a/WebApp/src/app/ticket-overview/ticket-overview.component.scss
+++ b/WebApp/src/app/ticket-overview/ticket-overview.component.scss
@@ -29,10 +29,9 @@ body {
 
     .content-section {
         box-sizing: border-box;
-        max-height: 80%;
-        margin: auto;
-        margin-top: 1rem;
-        overflow: scroll;
+        max-height: 85%;
+        margin: 1rem auto;
+        overflow: auto;
     }
 
     ::-webkit-scrollbar {
